<resources>
    <string name="app_name">SimpleCalculator</string>

    <!-- Numbers and Operations Buttons -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="ac">AC</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="backspace">Backspace</string>

    <!-- Error Message for Division by Zero -->
    <string name="error_message_cannot_divide_by_zero">Can not Divide By Zero!</string>

</resources>