<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_calculator">

    <data>

        <variable
            name="viewModel"
            type="com.mx3.thirdwayvsimplecalculator.ui.viewmodel.CalculatorViewModel" />
    </data>

    <!-- TODO fix buttons text size for landscape -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline">

        <!-- Vertical Guidelines -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_25"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_50"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_75"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />


        <!-- First Column -->

        <!-- TODO implement AC functionality -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ac_button"
            style="@style/Widget.App.Button"
            android:tag="@string/ac"
            android:text="@string/ac"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/seven_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:shown="@{false}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/seven"
            android:text="@string/seven"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/four_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ac_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/four"
            android:text="@string/four"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/one_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/one"
            android:text="@string/one"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/dot_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/dot"
            android:text="@string/dot"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one_button" />


        <!-- Second Column -->

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/redo_button"
            style="@style/Widget.App.ImageButton"
            android:onClick="@{() -> viewModel.onRedoButtonClicked()}"
            android:src="@drawable/ic_redo"
            android:tag="@string/redo"
            app:buttonEnabled="@{viewModel.isRedoButtonEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/eight_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_50"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_25"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/eight"
            android:text="@string/eight"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/five_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_50"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_25"
            app:layout_constraintTop_toBottomOf="@id/redo_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/five"
            android:text="@string/five"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/two_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_50"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_25"
            app:layout_constraintTop_toBottomOf="@id/eight_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/two"
            android:text="@string/two"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/zero_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_50"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_25"
            app:layout_constraintTop_toBottomOf="@id/five_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/zero"
            android:text="@string/zero"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_50"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_25"
            app:layout_constraintTop_toBottomOf="@id/two_button" />


        <!-- Third Column -->

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/undo_button"
            style="@style/Widget.App.ImageButton"
            android:onClick="@{() -> viewModel.onUndoButtonClicked()}"
            android:src="@drawable/ic_undo"
            android:tag="@string/undo"
            app:buttonEnabled="@{viewModel.isUndoButtonEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/eight_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_75"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/nine"
            android:text="@string/nine"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/five_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_75"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_50"
            app:layout_constraintTop_toBottomOf="@id/redo_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/six"
            android:text="@string/six"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/two_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_75"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_50"
            app:layout_constraintTop_toBottomOf="@id/eight_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperandButtonClicked(view)}"
            android:tag="@string/three"
            android:text="@string/three"
            app:buttonEnabled="@{viewModel.isOperandButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/zero_button"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_75"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_50"
            app:layout_constraintTop_toBottomOf="@id/five_button" />

        <!-- TODO implement backspace functionality -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backspace_button"
            style="@style/Widget.App.ImageButton"
            android:src="@drawable/ic_backspace"
            android:tag="@string/backspace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline_75"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_50"
            app:layout_constraintTop_toBottomOf="@id/two_button"
            app:shown="@{false}" />


        <!-- Fourth Column -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divide_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperatorButtonClicked(view)}"
            android:tag="@string/divide"
            android:text="@string/divide"
            app:buttonEnabled="@{viewModel.isOperationButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/multiply_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_75"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperatorButtonClicked(view)}"
            android:tag="@string/multiply"
            android:text="@string/multiply"
            app:buttonEnabled="@{viewModel.isOperationButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/minus_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_75"
            app:layout_constraintTop_toBottomOf="@id/divide_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperatorButtonClicked(view)}"
            android:tag="@string/minus"
            android:text="@string/minus"
            app:buttonEnabled="@{viewModel.isOperationButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/plus_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_75"
            app:layout_constraintTop_toBottomOf="@id/eight_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_button"
            style="@style/Widget.App.Button"
            android:onClick="@{(view) -> viewModel.onOperatorButtonClicked(view)}"
            android:tag="@string/plus"
            android:text="@string/plus"
            app:buttonEnabled="@{viewModel.isOperationButtonsEnabledLiveData}"
            app:layout_constraintBottom_toTopOf="@id/zero_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_75"
            app:layout_constraintTop_toBottomOf="@id/minus_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal_button"
            style="@style/Widget.App.Button"
            android:onClick="@{() -> viewModel.onEqualButtonClicked()}"
            android:tag="@string/equal"
            android:text="@string/equal"
            app:buttonEnabled="@{viewModel.isEqualButtonEnabledLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline_75"
            app:layout_constraintTop_toBottomOf="@id/plus_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>